--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.1",
     "git-revision-webpack-plugin": "^3.0.3",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11"
   }
