Replaced CSS to LESS. And no more import CSS.
We replaces CSS to LESS. And don't import css file on html. Just it imports automatic when you imported "ovenplayer.js".

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OvenPlayer",
-  "version": "0.6.5",
+  "version": "0.6.6",
   "description": "The OvenPlayer is an HTML5 player designed to make it easier to play ultra-low latency streams from the OvenMediaEngine.",
   "main": "openplayer.js",
   "scripts": {
@@ -24,7 +24,12 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
     "git-revision-webpack-plugin": "^3.0.3",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11"
