--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OvenPlayer",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "The OvenPlayer is an HTML5 player designed to make it easier to play ultra-low latency streams from the OvenMediaEngine.",
   "main": "openplayer.js",
   "scripts": {
@@ -29,9 +29,11 @@
     "git-revision-webpack-plugin": "^3.0.3",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
+    "postcss-loader": "^2.1.6",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11"
+    "webpack-cli": "^2.0.11",
+    "url-loader": "^1.1.1"
   }
 }
