--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.1.1",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11"
+    "webpack-cli": "^3.1.1"
+  },
+  "dependencies": {
+    "webpack-cli": "^3.1.1"
   }
 }
