--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OvenPlayer",
-  "version": "0.7.6",
+  "version": "0.7.62",
   "description": "The OvenPlayer is an HTML5 player designed to make it easier to play ultra-low latency streams from the OvenMediaEngine.",
   "main": "openplayer.js",
   "scripts": {
@@ -36,9 +36,7 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.1.1",
     "webpack": "^4.1.1",
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.2"
   },
-  "dependencies": {
-    "webpack-cli": "^3.1.1"
-  }
+  "dependencies": {}
 }
