--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OvenPlayer",
-  "version": "0.7.8",
+  "version": "0.7.82",
   "description": "The OvenPlayer is an HTML5 player designed to make it easier to play ultra-low latency streams from the OvenMediaEngine.",
   "main": "openplayer.js",
   "scripts": {
@@ -18,10 +18,7 @@
     "url": "https://github.com/AirenSoft/OvenPlayer/issues"
   },
   "homepage": "https://github.com/AirenSoft/OvenPlayer",
-  "devDependencies": {
-    "net": "^1.0.2",
-    "tls": "0.0.1"
-  },
+  "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -29,7 +26,6 @@
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "buffer": "^5.2.1",
     "chardet": "^0.7.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
@@ -41,7 +37,6 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "postcss-loader": "^2.1.6",
-    "request": "^2.88.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
