--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "OvenPlayer",
-  "version": "0.9.0",
-  "description": "The OvenPlayer is an HTML5 player designed to make it easier to play ultra-low latency streams from the OvenMediaEngine.",
-  "main": "ovenplayer.js",
+  "name": "ovenplayer",
+  "version": "0.10.0",
+  "description": "OvenPlayer is Open-Source HTML5 Player. OvenPlayer supports WebRTC Signaling from OvenMediaEngine for Sub-Second Latency Streaming.",
+  "main": "dist/ovenplayer.js",
   "scripts": {
     "watch": "webpack --config webpack.config.js --watch",
     "build": "webpack --config webpack.config.js"
@@ -11,37 +11,38 @@
     "type": "git",
     "url": "git+https://github.com/AirenSoft/OvenPlayer.git"
   },
-  "keywords": [],
+  "keywords": [
+    "Sub-Second Latency Streaming",
+    "WebRTC",
+    "OvenMediaEngine",
+    "Low Latency HTTP",
+    "MPEG-DASH",
+    "HLS",
+    "HTML5",
+    "Video",
+    "Player"
+  ],
   "author": "AirenSoft Co., Ltd.",
-  "license": "https://github.com/AirenSoft/OvenPlayerPrivate/blob/master/LICENSE",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AirenSoft/OvenPlayer/issues"
   },
-  "homepage": "https://github.com/AirenSoft/OvenPlayer",
+  "homepage": "https://www.ovenmediaengine.com/ovenplayer",
   "devDependencies": {
-    "webpack-bundle-analyzer": "^3.0.3"
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.51.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "chardet": "^0.7.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
-    "es6-request": "^2.4.0",
-    "file-loader": "^1.1.11",
-    "git-revision-webpack-plugin": "^3.0.3",
-    "iconv-lite": "^0.4.24",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "resize-sensor": "0.0.6",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5"
+    "core-js": "^3.16.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
