Add setting for development

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # this is local development directory
 local
+dev
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,intellij,pycharm,phpstorm,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,intellij,pycharm,phpstorm,visualstudiocode
