--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ovenplayer-vue3",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-beta.1",
   "type": "module",
   "main": "dist/ovenplayer-vue3.umd.js",
   "module": "dist/ovenplayer-vue3.es.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build && vue-tsc --declaration --emitDeclarationOnly",
     "preview": "vite preview"
+  },
+  "exports": {
+    "types": "./dist/types/index.d.ts"
   },
   "peerDependencies": {
     "vue": "^3.3.4"
