--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ovenplayer-vue3",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "type": "module",
   "main": "dist/ovenplayer-vue3.umd.js",
   "module": "dist/ovenplayer-vue3.es.js",
@@ -10,20 +10,24 @@
     "preview": "vite preview"
   },
   "exports": {
-    "types": "./dist/types/index.d.ts"
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/ovenplayer-vue3.es.js",
+      "require": "./dist/ovenplayer-vue3.umd.js"
+    }
   },
   "peerDependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.6"
   },
   "dependencies": {
-    "ovenplayer": "^0.10.18"
+    "ovenplayer": "^0.10.31"
   },
   "devDependencies": {
-    "@types/node": "^18.18.3",
-    "@types/ovenplayer": "^0.10.6",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "@types/node": "^18.18.6",
+    "@types/ovenplayer": "^0.10.8",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vue-tsc": "^1.8.19"
   }
 }
