--- a/package.json
+++ b/package.json
@@ -31,19 +31,19 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@types/google_interactive_media_ads_types": "^3.697.1",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.16.3",
     "css-loader": "^6.2.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "media-captions": "^0.0.18",
+    "raw-loader": "^4.0.2",
     "style-loader": "^3.2.1",
+    "underscore": "^1.13.7",
     "webpack": "^5.51.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^4.8.0",
-    "webpack-merge": "^5.8.0",
-    "raw-loader": "^4.0.2"
-  },
-  "dependencies": {
-    "core-js": "^3.16.3",
-    "whatwg-fetch": "^3.6.2"
+    "webpack-merge": "^5.8.0"
   }
 }
